# KB_2310

./: .dockerignore  .editorconfig  .eslintrc.js  .gitignore  .pdm-python  .prettierrc.js  .rtx.toml  Dockerfile  Makefile  README.md  compose.yaml  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js  vercel.json
api/: chatgpt.py  config.py  deepl.py  gooapi.py  image.py  index.py  interview.py  main.py  palm.py  sound.py  testplay.py
api/images/: image.txt
api/sounds/: sound.m4a
src/app/: page.tsx
src/app/detail/: layout.tsx  page.tsx
src/app/meeting/: page.tsx
